styles.css
/* font */
.inter {
  font-family: "Inter", sans-serif;
  font-optical-sizing: auto;
  font-style: normal;
}
.noto-serif {
  font-family: "Noto Serif", serif;
  font-optical-sizing: auto;
  font-style: normal;
  font-variation-settings:
    "wdth" 100;
}

/* header section  */
/* navigation  */
body{
     background-color: rgba(200, 200, 200, 0.2); 
}
header{
    max-width: 1140px;
    margin: 50px auto 120px auto;
}
nav{
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.nav-link-cart,
.nav-links,
.nav-cart{
    display: flex;
    justify-content: center;
    align-items: center;
}
.nav-link-cart{
    padding: 18px 0px;
}
.nav-links{
    gap: 48px;
    margin-right: 48px;
}
.nav-cart{
    gap: 10px;
}
.nav-links a{
    font-size: 16px;
    color: rgba(137, 135, 161, 1);
    text-decoration: none;
}
.nav-links-home{
    font-weight: bold;
    color: rgba(37, 36, 50, 1);
}

/* hero section */
.hero{
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: end;
    margin: 120px auto 0px auto;
}

.hero-content h1{
    font-weight: bold;
    font-size: 65px;
    margin: 0;
}
.hero-content p{
    font-size: 22px;
    color: rgba(0, 0, 0, 0.5);
    margin: 0;
    margin-top: 13px;
}

/* shared style */
span{
    color: rgba(233, 90, 8, 1);
}

/* Main section */
/* container-1 */
main{
   margin-top: 0px;
   margin-bottom: 120px;
}
.container-1{
    max-width: 1140px;
    margin-left: auto;
    margin-right: auto;
}
.container-1-title{
    font-weight: bold;
    font-size: 50px;
    margin: 16px;
    text-align: center;
}
.container-1-descrip{
    font-size: 22px;
    color: rgba(0, 0, 0, 0.5);
    margin: 0;
    margin-bottom: 50px;
    text-align: center;
}
.carts{
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 20px;
}
.cart-item {
    width: 270px;
    margin-bottom: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, .2);
}
.cart-img{
    width: 100%;
    margin-bottom: 30px;
}
.item-detail{
    font-weight: 500;
    font-size: 22px;
    color: rgba(17, 17, 17, 1);
    text-align: center;
    margin: 0;
    margin-bottom: 20px;
}
.item-price{
    font-weight: bold;
    font-size: 22px;
    margin: 0;
    text-align: center;
    margin-bottom: 30px;
}
.cart-button{
    width: 100%;
    height: 50px;
    font-weight: 600;
    font-size: 16px;
    background-color: rgba(233, 90, 8, 1);
    color: white;
    border: none;
}
/* container-2 */
.container-2{
    margin-top: 210px;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 60px;
    position: relative;
    max-width: 1140px;
    margin-left: auto;
    margin-right: auto;
}

.container-2-img{
    width: 540px;
    height: 597px;
}
.container-2-des{
    max-height: 522px;
}
.container-2-title{
    font-weight: bold;
    font-size: 50px;
    margin: 0;
    margin-bottom: 20px;
}
li p{
    font-size: 22px;
    color: rgba(0, 0, 0, 0.5);
    margin: 0;
    margin-bottom: 20px;
}
.trusted-img{
    position: absolute;
    width: 286px;
    height: 286px;
    top: -127px;
    left: 347px;
    filter: drop-shadow(-6px 8px 10px rgba(0, 0, 0, 0.4));
}

/* Container-3 */
.container-3{
    max-width: 1140px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 130px;
}
.latest-deals{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.latest-deals-title{
    font-weight: bold;
    font-size: 50px;
    margin: 0;
    margin-bottom: 16px;
    text-align: center;
}
.latest-deals-des{
    max-width: 888px;
    font-size: 22px;
    color: rgba(0, 0, 0, 0.5);
    margin-bottom: 16px;
    text-align: center;
}
.sales{
    margin-top: 120px;
    display: grid;
    grid-template-columns: repeat(3,1fr);
    gap: 25px;
}

.sales-2{
    grid-column: span 2;
    grid-row: span 2;
}
.sales p{
    margin: 0;
    margin-bottom: 19px;
}
.sales-1{
    background-image: url(./assets/deal-bloom.png);
}
.sales-2 {
    position: relative;
    background-image: url(./assets/deal-zabo.png);
    background-size: cover;
    background-repeat: no-repeat;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    color: white;
    font-weight: bold;
    font-size: 40px;
    border-radius: 22px;
    overflow: hidden;
}

.sales-3{
    background-image: url(./assets/deal-ana.png);
}
.sales-1,
.sales-3{
    position: relative;
    width: 366.22px;
    height: 206px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-size: cover;
    background-repeat: no-repeat;
    text-align: center;
    color: white;
    font-weight: bold;
    font-size: 20px;
    border-radius: 14px;
    overflow: hidden;
}

.sales-1::before,
.sales-2::before,
.sales-3::before{
    content: "";
    position: absolute;
    top: 0; left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.4);
    z-index: 0;
    border-radius: 22px;
}

.sales-1 > * ,
.sales-2 > * ,
.sales-3 > *{
    position: relative;
    z-index: 1;
}
.sales-1 a,
.sales-3 a{
    font-weight: 600;
    font-size: 16px;
}
.sales-2 a{
    font-weight: 600;
    font-size: 28px;
}
.sales a{
    margin: 0;
    text-decoration: underline white;
    color: white;
}

/* conatiner 4 */

.container-4{
    height: 533px;
    background-image: url(./assets/news-letter-bg.png);
    background-size: cover;
    background-repeat: no-repeat;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 120px;
}
.container-4 h1{
    color: white;
    font-weight: bold;
    font-size: 50px;
}
.container-4 input{
    padding: 15.5px auto 15.5px 20px;
    padding-left: 20px;
    width: 644px;
    height: 50px;
    border: none;
}
input::placeholder{
    color: rgba(0, 0, 0, 0.5);
    font-size: 16px;
}
.container-4 button{
    margin-left: 0;
    width: 186px;
    height: 50px;
    background-color: rgba(233, 90, 8, 1);
    border: none;
    font-weight: 600;
    font-size: 16px;
    color: white;
}

/* footer */
.footer-content{
    display: flex;
    justify-content: center;
    gap: 110px;
}
.footer-item-1{
    width: 360px;
    font-size: 22px;
    color: rgba(0, 0, 0, 0.5);
}
.footer-item-1 p{
    margin: 0;
    margin-top: 16px;
}
.footer-item-2,
.footer-item-3{
    display: flex;
    flex-direction: column;
    gap: 32px;
}
.footer-item-2 a,
.footer-item-3 a{
     font-size: 16px;
     text-decoration: none;
     color: rgba(107, 114, 128, 1);
}
.footer-item-4{
    width: 216px;
    height: 36px;
    display: flex;
    justify-content: right;
    gap: 24px;
}

a:hover,
button:hover{
   background-color: aquamarine;
}

.display{
    display: none;
}
@media screen and (max-width: 575.989px) {
    header{
        max-width: calc(100vw);
        margin: 0;
        margin-top: 13px;
        margin-bottom: 60px;
    }
    .logo{
        width: 63px;
        height: 38px;
    }
    .nav{
        margin-bottom: 28px;
    }
    .nav-links{
        display: none;
    }
    .hero{
        width: calc(100wh);
        padding: 0;
        margin: 0;
        flex-direction: column-reverse;
        gap: 28px;
        
    }
    
    .hero-content h1{
        font-size: 24px;   
    }
    .content-img{
        width: 100vw;
        height: 245px;
    }
     .content-img img{
        width: 100%;
        height: 245px;
    }
    .footer-content{
        flex-direction: column;
        gap: 20px;
    }
    .title{
        font-size: 24px;
    }
    .item-detail,
    .item-price{
        font-size: 16px;
    }
    .hero-content p,
    .font-14{
        font-size: 14px;
    }
    .container-1{
        margin: 0;
        padding: 0;
    }
    .carts {
        margin: 0;
        padding: 0;
        width: 100%;
        grid-template-columns: repeat(2, 1fr);
        gap: 20px;
    }
    .cart-item {
        width: 100%;
        margin-bottom: 10.5px;
        box-shadow: 0 4px 8px rgba(0, 0, 0, .2);
    }
    /* Container-2 */
    .container-2{
        margin: 0;
        padding: 0;
        display: flex;
        flex-direction: column;
        margin-top: 30px;
    }
    .container-2-des{
        width: 100%;
    }
    .container-2-img{
       width: 100%;
       height: 396px;
    }
   .container-2-des ul {
       padding-left: 0;   
       margin-left: 25px;
    }
    .trusted-img{
        display: none;
    }
    
    /* Container 3 */
    .container-3{
        margin: 0;
        padding: 0;
        margin-top: 100px;
    }

    .latest-deals-title,
    .latest-deals-des{
        margin-bottom: 16px ;
    }
    
    .sales{
        width: 100%;
        margin-top: 50px;
        display: grid;
        display: flex;
        flex-direction: column;
        gap: 20px;
    }
    .latest-deals{
        width: 100%;
        display: grid;
        display: flex;
        flex-direction: column;
    }
    
    .sales-1,
    .sales-3{
        width: 100%;
    }
    .sales-2{
        width: 100%;;
        height: 206px;
        font-size: 20px;
        border-radius: 14px;
    }
    .sales-2 a{
        font-size: 16px;
    }
    .container-4{
        margin: 0;
        padding: 0;
        height: 275px;
        margin-top: 40px;
    }
    .container-4 h1{
        font-size: 20px;
    }
    .container-4 input{
        width: 218px;
    }
    .container-4 button{
        width: 103px;
    }
    footer{
        height: 865px;
        margin-bottom: 200px;
    }
    .footer-item-1 img{
        width: 180px;
        height: 110px;
    }
    .footer-item-2{
        gap: 32px;
    }
    .hero-content,
    .container-1,
    .container-2,
    .container-3,
    footer{
        margin-left: 15px; 
        margin-right: 15px;
    }
}

